--- a/boot.toml
+++ b/boot.toml
@@ -1,14 +1,19 @@
 [[boot_order]]
 modules = [
+	"Analytics",
+	"DataTreeService",
+	"CollisionGroup",
+	"Barrier",
+	"DestructibleService",
+	"Environment",
+	"ProjectileService",
 	"Lobby",
-	"Infrastructure",
-	"City",
 	"Player",
-	"Company",
-	"Map",
-	"Drone",
+	"Leviathan",
 	"Vehicle",
-	"Statistics",
+	"BuildService",
+	"Announcement",
+	"RoundService",
 ]
 is_shared = false
 domain_path = "game/ServerScriptService/Server"
@@ -16,38 +21,27 @@ build_path = "out/Server/Boot.server.luau"
 
 [[boot_order]]
 modules = [
-	"Onboarding",
-	"Build",
-	"Company",
-	"Financing",
-	"Shop",
-	"Vehicle",
-	"Ocean",
-	"Weather",
+	"Analytics",
+	"DataTree",
+	"HideServerPart",
+	"UI",
+	"ActionService",
+	"Projectile",
+	"Lobby",
+	"HUD",
+	"Map",
+	"Weapons",
+	"Leviathan",
 ]
 is_shared = false
 domain_path = "game/ReplicatedStorage/Client"
 build_path = "out/Client/Boot.client.luau"
 
+
 [[boot_order]]
 modules = [
-	"TitleSequence",
+	"StudioSequence",
 ]
 is_shared = false
-domain_path = "game/ReplicatedFirst/First"
+domain_path = "game/ReplicatedStorage/Packages"
 build_path = "out/First/Boot.client.luau"
-
-[[boot_order]]
-modules = [
-	"Onboarding",
-	"Build",
-	"Company",
-	"Financing",
-	"Shop",
-	"Vehicle",
-	"Ocean",
-	"Weather",
-]
-is_shared = false
-domain_path = "game/ReplicatedStorage/Client"
-build_path = "out/Client/Boot.client.luau"
