--- a/wally.toml
+++ b/wally.toml
@@ -1,3 +1,5 @@
+version = "0.1.0"
+
 [package]
 name = "do-not-publish/xyz"
 version = "0.1.0"
@@ -6,38 +8,31 @@ realm = "shared"
 
 [dependencies]
 CFrameUtil = "nightcycle/cframe-util@1.0.0"
-ColdFusion = "nightcycle/cold-fusion@7.0.1"
+ColdFusion = "nightcycle/cold-fusion@9.0.7"
 ConstraintUtil = "nightcycle/constraint-util@1.0.0"
 CurveUtil = "nightcycle/curve-util@1.0.0"
 Draw = "nightcycle/draw@1.0.6"
 GeometryUtil = "nightcycle/geometry-util@1.1.1"
 Maid = "nightcycle/maid@1.1.4"
-Matrix = "nightcycle/matrix@1.0.1"
 MeshUtil = "nightcycle/mesh-util@1.0.3"
 ModelUtil = "nightcycle/model-util@1.0.6"
 NetworkUtil = "nightcycle/network-util@1.7.0"
-NoiseUtil = "nightcycle/noise-util@1.0.5"
-PathUtil = "nightcycle/path-util@2.0.3"
-PhysicsUtil = "nightcycle/physics-util@1.3.0"
-Serialize = "nightcycle/serializer@0.1.9"
+PhysicsUtil = "nightcycle/physics-util@1.4.0"
+SerializeUtil = "nightcycle/serializer@0.1.10"
 ServiceProxy = "nightcycle/service-proxy@1.0.0"
 Signal = "nightcycle/signal@1.0.2"
-Sketcher = "nightcycle/sketcher@1.1.2"
 Spring = "nightcycle/spring@1.0.0"
-Synthetic = "nightcycle/synthetic@4.1.8"
+Synthetic = "nightcycle/synthetic@6.0.2"
 TableUtil = "nightcycle/table-util@1.1.0"
-TimeSync = "nightcycle/timesync@0.1.2"
-UnitTest = "nightcycle/unit-test@1.0.1"
-ValueSequence = "nightcycle/valuesequence@1.1.0"
-Vector = "nightcycle/vector@1.0.2"
-Midas = "nightcycle/midas@2.0.1"
-Landmaster = "nightcycle/landmaster@1.4.10"
-Node = "nightcycle/node@1.0.3"
-GuiLibrary = "nightcycle/gui-library@1.1.23"
-PageService = "nightcycle/page-service@1.0.4"
+GuiLibrary = "nightcycle/gui-library@3.0.1"
+PageService = "nightcycle/page-service@3.0.0"
 StudioSequence = "nightcycle/studio-sequence@1.0.0"
-SkyService = "nightcycle/sky-service@1.0.0"
 InstancePool = "nightcycle/instance-pool@1.0.0"
 FiniteStateMachine = "nightcycle/finite-state-machine@3.0.0"
-Raycaster = "nightcycle/raycaster@1.0.0"
+Raycaster = "nightcycle/raycaster@3.0.0"
 FormatUtil = "nightcycle/format-util@1.0.0"
+TestEZ = "roblox/testez@0.4.1"
+CameraShaker = "brittonfischer/camerashaker@0.1.0"
+HashUtil = "boatbomber/hashlib@1.0.0"
+Midas = "nightcycle/midas@3.0.1"
+Ragdoll = "passhley/player-ragdoll@0.1.0"
