--- a/asphalt.toml
+++ b/asphalt.toml
@@ -3,9 +3,9 @@ dir_path = "asphalt/ReplicatedStorage"
 module_path = "out/Shared/Asphalt.luau"
 efficient_build_includes_all_local_files = true
 asset_usage_audit_script_directories = ["src"]
-importable_lock_files = [
-	"C://Users/coyer/media/asphalt.lock"
-]
+
+[build.libraries]
+media = "nightcycle/media@1.0.0"
 
 [build.publish]
 publish_to_group = true
@@ -16,42 +16,42 @@ dir_path = "asphalt/SoundService"
 compression_directory_instance = "SoundGroup"
 sources = [
 	"asset/audio",
-	"C://Users/coyer/media/src/audio"
+	"media/audio"
 ]
 
 [media.image]
 sources = [
 	"asset/image",
-	"C://Users/coyer/media/src/image"
+	"media/image"
 ]
 
 [media.material]
 dir_path = "asphalt/MaterialService"
 sources = [
 	"asset/material",
-	"C://Users/coyer/media/src/material"
+	"media/material"
 ]
 
 [media.mesh]
 sources = [
 	"asset/mesh",
-	"C://Users/coyer/media/src/mesh"
+	"media/mesh"
 ]
 
 [media.model]
 sources = [
 	"asset/model",
-	"C://Users/coyer/media/src/model"
+	"media/model"
 ]
 
 [media.particle]
 sources = [
 	"asset/particle",
-	"C://Users/coyer/media/src/particle"
+	"media/particle"
 ]
 
 [media.animation]
 sources = [
 	"asset/animation",
-	"C://Users/coyer/media/src/animation"
+	"media/animation"
 ]
