--- a/default.project.json
+++ b/default.project.json
@@ -1,97 +1,104 @@
 {
-    "name": "Infrastruct",
-    "globIgnorePaths": [
-        "**/package.json",
-        "**/tsconfig.json"
-    ],
-    "tree": {
-        "$className": "DataModel",
-        "ReplicatedFirst": {
-            "$className": "ReplicatedFirst",
-            "First": {
-                "$className": "Folder",
-                "$path": "src/First",
-			 "Boot": {
-				"$path": "out/First/Boot"
-			 }
-            }
-        },
-        "ReplicatedStorage": {
-            "$className": "ReplicatedStorage",
-            "Packages": {
-                "$className": "Folder",
-                "$path": "Packages"
-            },
-		  "Asphalt": {
-			"$className": "Folder",
-			"$path": "asphalt/ReplicatedStorage"
-		 },
-            "Shared": {
-                "$className": "Folder",
-                "$path": "src/Shared",
-			 "Asphalt": {
-				"$path": "out/Shared/Asphalt"
-			 },
-			 "MidasTree": {
-				"$path": "out/Shared/MidasTree"
-			 },
-			 "Balancing": {
-				"$path": "out/Shared/Balancing"
-			 },
-			 "DataTreeTypes": {
-				"$path": "out/Shared/DataTreeTypes.luau"
-			 }, 
-			 "PseudoEnum": {
-				"$path": "out/Shared/PseudoEnum.luau"
-			 }, 
-			 "Scene": {
-				"$path": "out/Shared/Scene.luau"
-			 }
-            },
-            "Client": {
-                "$className": "Folder",
-                "$path": "src/Client",
-			 "StyleGuide": {
-				"$path": "out/Client/StyleGuide"
-			 },
-			 "Analytics": {
-				"$path": "out/Client/Analytics"
-			 },
-			 "Boot": {
-				"$path": "out/Client/Boot"
-			 },
-			 "DataTree": {
-				"$path": "out/Client/DataTree"
-			 }
-            }
-        },
-	   "MaterialService": {
-		"$className": "MaterialService",
-		"Material": {
-			"$path": "asphalt/MaterialService"
-		 }
-	   },
-	   "SoundService": {
-		"$className": "SoundService",
-		"Audio": {
-			"$path": "asphalt/SoundService.rbxm"
-		 }
-	   },
-        "ServerScriptService": {
-            "$className": "ServerScriptService",
-            "Server": {
-                "$className": "Folder",
-                "$path": "src/Server",
-			 "Analytics": {
-				"$path": "out/Server/Analytics"
-			 },
-			 "Boot": {
-				"$path": "out/Server/Boot"
-			 },
-			 "DataTreeService": {
-				"$path": "out/Server/DataTreeService"
-			 }
-            }
-        }
-    }
+     "name": "wasteland-leviathan@0.1.0",
+     "globIgnorePaths": [
+          "**/package.json",
+          "**/tsconfig.json"
+     ],
+     "tree": {
+          "$className": "DataModel",
+          "ReplicatedFirst": {
+               "$className": "ReplicatedFirst",
+               "First": {
+                    "$className": "Folder",
+                    "$path": "src/First",
+                    "Boot": {
+                         "$path": "out/First/Boot"
+                    }
+               }
+          },
+          "ReplicatedStorage": {
+               "$className": "ReplicatedStorage",
+               "Packages": {
+                    "$className": "Folder",
+                    "$path": "Packages"
+               },
+               "Asphalt": {
+                    "$className": "Folder",
+                    "$path": "asphalt/ReplicatedStorage"
+               },
+               "Shared": {
+                    "$className": "Folder",
+                    "$path": "src/Shared",
+                    "Asphalt": {
+                         "$path": "out/Shared/Asphalt"
+                    },
+                    "PseudoEnum": {
+                         "$path": "out/Shared/PseudoEnum.luau"
+                    },
+                    "DataTreeTypes": {
+                         "$path": "out/Shared/DataTreeTypes.luau"
+                    },
+                    "MidasEventTree": {
+                         "$path": "out/Shared/MidasEventTree"
+                    },
+                    "MidasStateTree": {
+                         "$path": "out/Shared/MidasStateTree"
+                    },
+                    "Scene": {
+                         "$path": "out/Shared/Scene.luau"
+                    },
+				"Version": {
+                         "$path": "out/Shared/Version.luau"
+                    },
+                    "Balancing": {
+                         "$path": "out/Shared/Balancing"
+                    }
+               },
+               "Client": {
+                    "$className": "Folder",
+                    "$path": "src/Client",
+                    "StyleGuide": {
+                         "$path": "out/Client/StyleGuide"
+				},
+                    "DataTree": {
+                         "$path": "out/Client/DataTree"
+                    },
+                    "Analytics": {
+                         "$path": "out/Client/Analytics"
+                    }
+               }
+          },
+          "MaterialService": {
+               "$className": "MaterialService",
+               "$path": "asphalt/MaterialService"
+          },
+          "SoundService": {
+               "$className": "SoundService",
+               "$path": "asphalt/SoundService"
+          },
+          "ServerScriptService": {
+               "$className": "ServerScriptService",
+               "Server": {
+                    "$className": "Folder",
+                    "$path": "src/Server",
+                    "Boot": {
+                         "$path": "out/Server/Boot"
+                    },
+                    "DataTreeService": {
+                         "$path": "out/Server/DataTreeService"
+                    },
+                    "Analytics": {
+                         "$path": "out/Server/Analytics"
+                    }
+			}
+		},
+		"StarterPlayer": {
+			"$className": "StarterPlayer",
+			"StarterPlayerScripts": {
+				"Boot": {
+                         "$path": "out/Client/Boot"
+                    }
+			}
+		}
+	}
 }
